--- a/carrito.html
+++ b/carrito.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>carrito</title>
-    <link rel="stylesheet" href="css/carrito.css">
-    <link rel="icon" href="../logo3.png">
+    <link rel="stylesheet" href="carrito.css">
+    <link rel="icon" href="logo3.png">
 </head>
 <body>
     <div class="etiqueta"><p>40% de descuento si el profe nos da punto extra :D</p></div>
@@ -14,27 +14,27 @@
         <label for="menu-checkbox" class="menu-toggler">=</label>
         <input type="checkbox" id="menu-checkbox">
         <div class="menu">
-            <a href="Index.html">INICIO</a>
-            <a href="destacados.html">DESTACADO</a>
+            <a href="https://luinath.github.io/sakuramarketi.github.io/Index.html">INICIO</a>
+            <a href="https://luinath.github.io/Sakura_detacado.github.io/destacados.html">DESTACADO</a>
         </div>
     </div>
 
         <div class="container-nav">
-           <span> <a href="Index.html">Sakura Market</a></span>
+           <span> <a href="https://luinath.github.io/sakuramarketi.github.io/Index.html">Sakura Market</a></span>
             <nav>
             <ul>
-                <a href="Index.html"><li >INICIO</li></a>
-                <a href="Catego.html"><li >CATEGORIA</li></a>
-                <a href="destacados.html"><li >DESTACADO</li></a>
-                <a href="contactanos.html"><li>CONTACTANOS</li></a>
+                <a href="https://luinath.github.io/sakuramarketi.github.io/Index.html"><li >INICIO</li></a>
+                <a href="https://luinath.github.io/sakuracatego.github.io/Catego.html"><li >CATEGORIA</li></a>
+                <a href="https://luinath.github.io/Sakura_detacado.github.io/destacados.html"><li >DESTACADO</li></a>
+                <a href="https://luinath.github.io/Sakura_Contactanos.github.io/contactanos.html"><li>CONTACTANOS</li></a>
             </ul>
         </nav>
     </div>
         <div class="container-img">
-        <img class="none" src="img/lupa.png" alt="">
-        <a href="sesion.html" >
-            <img src="img/contacts_product_FILL0_wght400_GRAD0_opsz24.png" alt=""></a>
-        <a href="carrito.html" class="nav-inicio"><img class="nav-inicio" src="img/local_mall_FILL0_wght400_GRAD0_opsz24.png" alt=""></a> 
+        <img class="none" src="lupa.png" alt="">
+        <a href="https://luinath.github.io/Sakura-Inisiosesion.github.io/sesion.html" >
+            <img src="contacts_product_FILL0_wght400_GRAD0_opsz24.png" alt=""></a>
+        <a href="carrito.html" class="nav-inicio"><img class="nav-inicio" src="local_mall_FILL0_wght400_GRAD0_opsz24.png" alt=""></a> 
     </div>
     </header>
     <main>
@@ -42,15 +42,15 @@
             <h2>Tu carrito esta vacío</h2>
             <div class="button"> <input type="button" value="Seguir Comprando"></div>
             <h4>¿Tienes una cuenta?</h4>
-            <p class="center"><a href="sesion.html">Inicia Sesion</a> para finalizar tus compras con mayor rapidez</p>
+            <p class="center"><a href="https://luinath.github.io/Sakura-Inisiosesion.github.io/sesion.html">Inicia Sesion</a> para finalizar tus compras con mayor rapidez</p>
         </div>
 
         <footer>
             <p>Puedes escribirnos al whatsapp: 9542-9362.</p>
             <p>Tambien nos puedes escribir a nuestros IG: @Sakura_Market <p>
-                <a href="#"><img src="img/facebook.png" alt=""></a>    
-                <a href="#"><img src="img/instagram.png" alt=""></a>
-                <a href="#"><img src="img/whatsapp.png" alt=""></a>
+                <a href="#"><img src="facebook.png" alt=""></a>    
+                <a href="#"><img src="instagram.png" alt=""></a>
+                <a href="#"><img src="whatsapp.png" alt=""></a>
         </footer>
 </body>
 </html>
